--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -79,7 +79,7 @@
   }
 
   &__content {
-    margin-top: 16rem;
+    margin-top: 17rem;
     padding-bottom: 5rem;
 
     @include respond(phone) {
@@ -92,7 +92,7 @@
       word-spacing: 1rem;
 
       @include respond(phone) {
-        font-size: 5.5rem;
+        font-size: 5rem;
       }
       &__text {
         &--greet {
